--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,13 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.footer {
+  padding: 1.8rem;
+  background-color: #f2f2f2;
+  color: rgb(37, 52, 78);
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 700;
+  text-align: center;
+}
